--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
   <link href="https://fonts.googleapis.com/css?family=Nunito|Righteous" rel="stylesheet">
 
-  <title>React App</title>
+  <title>Get HTTPS for Free! Redesign</title>
 
   <style>
     p {
